--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -742,11 +742,22 @@ code {
 }
 
 .double-img {
+    width: 45%;
+    margin: 10px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px #21212170;
+}
+.double-img-show {
     width: 50%;
     margin: 10px;
 }
 
 .single-img {
+    width: 100%;
+    border-radius: 15px;
+    box-shadow: 0px 0px 20px #21212170;
+}
+.single-img-show {
     width: 100%;
 }
 
@@ -911,7 +922,13 @@ code {
     .double-img {
         width: 100%;
     }
+    .double-img-show {
+        width: 100%;
+    }
     .single-img {
+        width: 100%;
+    }
+    .single-img-show {
         width: 100%;
     }
     .feature-left {
