--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -340,7 +340,7 @@ a.inline-link:hover {
 
 div#main-content {
     background-color: #FAFAFA;
-    padding-top: 10%;
+    padding-top: 5%;
     padding-bottom: 5%;
     padding-left: calc(100vw - 85%);
     padding-right: calc(100vw - 85%);
@@ -348,12 +348,59 @@ div#main-content {
     justify-content: center;
     flex-flow: column;
 }
+.experience {
+    padding-bottom: 5%;
+    padding-left: calc(100vw - 90%);
+    padding-right: calc(100vw - 90%);
+    display: flex;
+    justify-content: center;
+    flex-flow: column;
+}
+
+.exp-row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: solid 1px #d7d7d7;
+    padding: 25px 5%;
+    color: #212121;
+}
+
+.exp-row:hover {
+    background: #f5f5f5;
+    color: initial;
+}
+
+.exp-position {
+    font-size: 2rem;
+    color: #74ebd5;
+    margin-bottom: 5px;
+    line-height: initial;
+}
+
+.exp-place, .exp-date {
+    font-size: 1.1rem;
+    text-transform: uppercase;
+    font-weight: 100;
+    letter-spacing: 1px;
+    margin-top: 10px;
+}
 
 .project-container {
     display: flex;
     width: 100%;
     justify-content: space-between;
     align-items: flex-start;
+}
+
+.main-page-meta-data {
+    text-align: center;
+    font-size: 1rem;
+    color: #b8b8b8;
+    font-weight: 100;
+    font-family: 'Montserrat', 'Avenir', sans-serif;
+    padding: 0 25%;
+    margin-bottom: 5%;
 }
 
 .parent-container {
@@ -810,9 +857,25 @@ code {
     border-bottom: 1px solid rgba(255, 255, 255, .1);
 }
 
+.main-page-title {
+    text-align: center;
+    font-family: 'Montserrat', 'Avenir', sans-serif;
+    font-size: 3rem;
+    color: #414141;
+    letter-spacing: 1px;
+    margin-bottom: 5%;
+    line-height: initial;
+}
+
 /* Mobile branding  */
 
 @media only screen and (max-width: 767px) and (min-width: 320px) {
+
+    .main-page-meta-data {
+        padding: 0 5%;
+    }
+    
+
     /* new styles */
     .home-top-container {
         min-height: 100vh;
