--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -529,6 +529,12 @@ i.large.icons {
     font-size: 2.5rem;
 }
 
+.parent-container#destiny-players {
+    /* background: linear-gradient(135deg, #ECF0F1, #B1B4B5); */
+    background: #191a1d;
+}
+
+
 .parent-container#destinder {
     /* background: linear-gradient(135deg, #ECF0F1, #B1B4B5); */
     background: #303E4E;
@@ -575,6 +581,13 @@ i.large.icons {
     height: calc(304px);
     transform: rotate(0deg) scale(1.3);
 }
+
+#destiny-players img {
+    width: 265px;
+    margin-bottom: -168px;
+    margin-left: 27px;
+}
+
 
 #icpm img {
     width: 265px;
